--- a/info_dataset.ipynb
+++ b/info_dataset.ipynb
@@ -8,9 +8,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-16T11:37:12.397778Z",
+     "start_time": "2025-05-16T11:37:12.395241Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/liadraetta/PycharmProjects/pythonProject2/.venv/bin/python\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.executable)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-16T11:39:28.640637Z",
+     "start_time": "2025-05-16T11:39:28.468525Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -19,8 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-16T11:33:12.842799Z",
+     "start_time": "2025-05-16T11:33:12.826052Z"
+    }
+   },
    "outputs": [],
    "source": [
     "train = pd.read_csv(\"data/SBIC.v2/SBIC.v2.trn.csv\")\n",
@@ -30,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,23 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['whoTarget', 'intentYN', 'sexYN', 'sexReason', 'offensiveYN',\n",
-       "       'annotatorGender', 'annotatorMinority', 'sexPhrase',\n",
-       "       'speakerMinorityYN', 'WorkerId', 'HITId', 'annotatorPolitics',\n",
-       "       'annotatorRace', 'annotatorAge', 'post', 'targetMinority',\n",
-       "       'targetCategory', 'targetStereotype', 'dataSource'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -89,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,18 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of texts:  45318\n",
-      "number of annotators:  307\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"number of texts: \", len(df[\"HITId\"].unique()))\n",
     "print(\"number of annotators: \", len(df[\"WorkerId\"].unique()))"
@@ -119,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,17 +198,17 @@
       "\n",
       "\n",
       "annotatorMinority\n",
-      "none                                                  11\n",
-      "women                                                  8\n",
-      "no                                                     3\n",
-      "Asian                                                  3\n",
-      "Women                                                  2\n",
-      "                                                      ..\n",
-      "White                                                  1\n",
-      "women, lower class                                     1\n",
-      "Black, non-binary, disabled, Muslim, working-class     1\n",
-      "No I do not                                            1\n",
-      "immigrants, and veterans                               1\n",
+      "none                             11\n",
+      "women                             8\n",
+      "Asian                             3\n",
+      "no                                3\n",
+      "No.                               2\n",
+      "                                 ..\n",
+      "Female, mentally ill, poverty     1\n",
+      "women, disabled                   1\n",
+      "white, male                       1\n",
+      "woman, asian                      1\n",
+      "immigrants, and veterans          1\n",
       "Name: count, Length: 67, dtype: int64\n",
       "\n",
       " -------------------------------------------------- \n",
@@ -214,12 +239,25 @@
       "\n",
       " -------------------------------------------------- \n",
       "\n",
+      "\n",
+      "annotatorPolitics\n",
+      "liberal        137\n",
+      "mod-liberal     57\n",
+      "mod-cons        36\n",
+      "other           29\n",
+      "cons            26\n",
+      "na              12\n",
+      "libert          10\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      " -------------------------------------------------- \n",
+      "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "traits = [\"annotatorGender\", \"annotatorMinority\",\"annotatorPolitics\", \"annotatorRace\"]\n",
+    "traits = [\"annotatorGender\", \"annotatorMinority\",\"annotatorPolitics\", \"annotatorRace\", \"annotatorPolitics\"]\n",
     "\n",
     "for i in traits: \n",
     "    print(df_demographics[i].value_counts())\n",
@@ -244,6 +282,16 @@
    "source": [
     "print(min(df_demographics[\"annotatorAge\"].tolist()))\n",
     "print(max(df_demographics[\"annotatorAge\"].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotators_politics = df[\"annotatorPolitics\"]\n",
+    "print(annotators_politics)"
    ]
   },
   {
@@ -437,6 +485,150 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       whoTarget  intentYN  sexYN sexReason  offensiveYN annotatorGender  \\\n",
+      "90818        NaN      0.00    0.0       NaN          0.0             man   \n",
+      "15789        NaN      0.00    0.0       NaN          0.0             man   \n",
+      "9246         1.0      1.00    0.0       NaN          1.0             man   \n",
+      "1201         NaN      0.00    0.0       NaN          0.0           woman   \n",
+      "26500        NaN      0.00    0.0       NaN          0.0           woman   \n",
+      "...          ...       ...    ...       ...          ...             ...   \n",
+      "7703         0.0      1.00    0.0       NaN          1.0             man   \n",
+      "16289        NaN      0.00    0.0       NaN          0.0             man   \n",
+      "73737        1.0      1.00    0.0       NaN          1.0           woman   \n",
+      "2030         0.0      0.33    0.0       NaN          0.5           woman   \n",
+      "9220         1.0      1.00    0.0       NaN          1.0           woman   \n",
+      "\n",
+      "                annotatorMinority sexPhrase  speakerMinorityYN  \\\n",
+      "90818                         NaN       NaN                NaN   \n",
+      "15789                         NaN       NaN                NaN   \n",
+      "9246                          NaN       NaN                0.0   \n",
+      "1201                          NaN       NaN                NaN   \n",
+      "26500                        none       NaN                NaN   \n",
+      "...                           ...       ...                ...   \n",
+      "7703                          NaN       NaN                NaN   \n",
+      "16289                         NaN       NaN                NaN   \n",
+      "73737                       women       NaN                0.0   \n",
+      "2030   Hispanic, female, bisexual       NaN                NaN   \n",
+      "9220                          NaN       NaN                0.0   \n",
+      "\n",
+      "                  WorkerId                           HITId annotatorPolitics  \\\n",
+      "90818 -7713443391178782699  3IQ9O0AYW6T20ZOLCO14EURHST0TI5       mod-liberal   \n",
+      "15789 -7353159578349448466  3SCKNODZ0XA7G225W1BVE6VGPV5N75       mod-liberal   \n",
+      "9246  -5870881806826799680  3R868ACW4S6KQKRPSSQJF6FIWGCZGN           liberal   \n",
+      "1201    955703508749055793  3PZDSVZ3J5BAXFKMU3DOBUB6WXW4NP           liberal   \n",
+      "26500 -7214361523799359328  3OYHVNTV5TSDT291GA0HX007IBAOKW       mod-liberal   \n",
+      "...                    ...                             ...               ...   \n",
+      "7703   3014462452121555470  30F94FBDNRESDRAF6E9NS7N4UTMBTX       mod-liberal   \n",
+      "16289 -7713443391178782699  39O0SQZVJN1SV0UXP8SCNQ0QPWU7RK       mod-liberal   \n",
+      "73737 -6837958490067487319  30ZKOOGW2W0MLXTEYHPHRQK3FMLA1M           liberal   \n",
+      "2030  -1074131302321565002  3APP19WN718I2A7EQNT8I8MNSC06GP       mod-liberal   \n",
+      "9220   8789702980570783632  3BC9H1KCYU6GIG7KBBSIN2S4J09WYI             other   \n",
+      "\n",
+      "      annotatorRace  annotatorAge  \\\n",
+      "90818         white          27.0   \n",
+      "15789         white          32.0   \n",
+      "9246          white          35.0   \n",
+      "1201          asian          23.0   \n",
+      "26500         white          48.0   \n",
+      "...             ...           ...   \n",
+      "7703          white          38.0   \n",
+      "16289         white          27.0   \n",
+      "73737         white          34.0   \n",
+      "2030           hisp          29.0   \n",
+      "9220           hisp          27.0   \n",
+      "\n",
+      "                                                    post  \\\n",
+      "90818  Freedom of speech is essential to the progress...   \n",
+      "15789  I assume you went to the High Caliber gun show...   \n",
+      "9246   \"RT @_JamesHumble: \"\"Guys can be assholes but ...   \n",
+      "1201   Sometimes I feel like Duche bag calls to the c...   \n",
+      "26500  Went to work at 530.... Only got paid for work...   \n",
+      "...                                                  ...   \n",
+      "7703   What's the similarity with beating my children...   \n",
+      "16289  When YOUR power seems insufficient, GOD'S powe...   \n",
+      "73737  q : what did the blind , deaf , mute quadraple...   \n",
+      "2030   \"you're too young for that1!1!!11!\"\" and i jus...   \n",
+      "9220   Y'all ever just live more than 6 years to flex...   \n",
+      "\n",
+      "                  targetMinority targetCategory  \\\n",
+      "90818                        NaN            NaN   \n",
+      "15789                        NaN            NaN   \n",
+      "9246                       women         gender   \n",
+      "1201                         NaN            NaN   \n",
+      "26500                        NaN            NaN   \n",
+      "...                          ...            ...   \n",
+      "7703                         NaN            NaN   \n",
+      "16289                        NaN            NaN   \n",
+      "73737  physically disabled folks       disabled   \n",
+      "2030                         NaN            NaN   \n",
+      "9220                   ethiopens           race   \n",
+      "\n",
+      "                            targetStereotype   dataSource  \n",
+      "90818                                    NaN          Gab  \n",
+      "15789                                    NaN   Stormfront  \n",
+      "9246                women are worse than men     t/founta  \n",
+      "1201                                     NaN     t/founta  \n",
+      "26500                                    NaN     t/founta  \n",
+      "...                                      ...          ...  \n",
+      "7703                                     NaN  r/darkjokes  \n",
+      "16289                                    NaN     t/founta  \n",
+      "73737  disabled people are the butt of jokes  r/meanjokes  \n",
+      "2030                                     NaN     t/founta  \n",
+      "9220                      ehtiopens are poor  r/darkjokes  \n",
+      "\n",
+      "[100 rows x 19 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Creo un subset per provare prompt\n",
+    "df_subset = df.sample(n=100, random_state=42) \n",
+    "print(df_subset)\n",
+    "\n",
+    "#df_subset.to_csv('subset_100.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                HITId  \\\n",
+      "90818  3IQ9O0AYW6T20ZOLCO14EURHST0TI5   \n",
+      "15789  3SCKNODZ0XA7G225W1BVE6VGPV5N75   \n",
+      "9246   3R868ACW4S6KQKRPSSQJF6FIWGCZGN   \n",
+      "1201   3PZDSVZ3J5BAXFKMU3DOBUB6WXW4NP   \n",
+      "26500  3OYHVNTV5TSDT291GA0HX007IBAOKW   \n",
+      "\n",
+      "                                                    post  \n",
+      "90818  Freedom of speech is essential to the progress...  \n",
+      "15789  I assume you went to the High Caliber gun show...  \n",
+      "9246   \"RT @_JamesHumble: \"\"Guys can be assholes but ...  \n",
+      "1201   Sometimes I feel like Duche bag calls to the c...  \n",
+      "26500  Went to work at 530.... Only got paid for work...  \n"
+     ]
+    }
+   ],
+   "source": [
+    "columns_to_drop = ['targetMinority',\t'targetCategory',\t'targetStereotype',\t'dataSource','whoTarget',\t'sexYN', 'sexReason', 'sexPhrase','annotatorPolitics',\t'annotatorRace','annotatorAge', 'intentYN', 'offensiveYN', 'annotatorGender', 'annotatorMinority', 'speakerMinorityYN', 'WorkerId']  # Replace with your actual column names\n",
+    "df_subset_cleaned = df_subset.drop(columns=columns_to_drop)\n",
+    "print(df_subset_cleaned.head(5))\n",
+    "df_subset_cleaned.to_csv('subset_100_cleaned.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -445,7 +637,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.11.10",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -459,9 +651,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
